--- a/abc.plist
+++ b/abc.plist
@@ -6,5 +6,20 @@
 	<string>1</string>
 	<key>DeforeColor</key>
 	<string>8f5e31</string>
+	<key>VersionNotAllowed</key>
+	<dict>
+		<key>A1893</key>
+		<array>
+			<string>11</string>
+			<string>4</string>
+			<string>1</string>
+		</array>
+		<key>A1458</key>
+		<array>
+			<string>10</string>
+			<string>3</string>
+			<string>3</string>
+		</array>
+	</dict>
 </dict>
 </plist>
